--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Chris Read</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,13 +16,34 @@
 
 		<!-- Sidebar -->
 			<section id="sidebar">
+				<div class="wrapper fade-up">
+					<div class="name">
+						<div style="font-family: 'Arial', monospace; font-size: 32px; text-align: right;">Chris Read</div>
+						<div style="font-family: 'Arial'; font-size: 15px; text-align: right;">Software Developer</div>
+						<div>
+							<div style="font-size: 12px;">rcreadii@gmail.com</div>
+							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-angellist fa-1x" /></i></a>
+							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-github fa-1x" /></i></a>
+							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-linkedin fa-1x" /></i></a>
+						</div>
+					</div>
+				</div>
+				<!-- <br/><br/> -->
+				<!-- <div style="font-size: 15px">
+					Working on
+					<div>
+						LoveLock - 
+					</div>
+				</div> -->
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#two">Projects</a></li>
+							<!-- <li><a href="#intro">Bio</a></li>  -->
+							<li><a href="#three">Coffee & Chat</a></li>
+							<!-- <li><a href="#one">Who we are</a></li> -->
+							<!-- <li><a href="#two">What we do</a></li> -->
+							<!-- <li><a href="#three">Get in touch</a></li> -->
 						</ul>
 					</nav>
 				</div>
@@ -31,8 +52,86 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
+		<!-- Two -->
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>Projects</h2>
+				<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis.
+					Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
+					<!-- <span style="font-style: italic;">Technologies</span>
+					<p>JavaScript React Redux Express Sequelize Node.js Python Flask Sqlalchemy PostgreSQL HTML/CSS</p> -->
+				<div class="features">
+					<section>
+						<span class="icon solid major fa-hand-holding-heart"></span>
+						<h3>LoveLock</h3>
+						<p>Looks towards each other, a world away.</p>
+						<!-- <img src="images/pic06.jpg"/> -->
+						<div>
+							<a href="https://lovelockapp.herokuapp.com/login"><i class="fab fa-chrome fa-lg" /></i></a>
+							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-github fa-lg"/></i></a>
+						</div>
+						<!-- <div style="font-size: 75%; padding-right: 4vw">React // Flask // Sqlalchemy // PostgreSQL</div> -->
+					</section>
+					<section>
+						<span class="icon solid major fa-wine-glass"></span>
+						<h3>OpenBar</h3>
+						<p>Find, book, and review bars you love.</p>
+						<div>
+							<a href="https://openbarweb.herokuapp.com/"><i class="fab fa-chrome fa-lg" /></i></a>
+							<a href="https://github.com/jpremo/open_bar"><i class="fab fa-github fa-lg" /></i></a>
+						</div>
+					</section>
+					<section>
+						<span class="icon solid major fa-laugh-beam"></span>
+						<h3>GoodLaughs</h3>
+						<p>Post, review, and comment on jokes you love.</p>
+						<div>
+							<a href="https://good-laughs.herokuapp.com/users/login"><i class="fab fa-chrome fa-lg" /></i></a>
+							<a href="https://github.com/Ty-Newman/GoodLaughs"><i class="fab fa-github fa-lg" /></i></a>
+						</div>
+					</section>
+					<section>
+						<span class="icon solid major fa-grin-alt"></span>
+						<h3>Tumbles</h3>
+						<p>Post and follow joke blogs you love.</p>
+						<div>
+							<!-- <a href="https://github.com/rcreadii/lovelock"><i class="fab fa-chrome fa-lg" /></i></a> -->
+							<a href="https://github.com/rcreadii/tumbles"><i class="fab fa-github fa-lg" /></i></a>
+						</div>
+					</section>
+					<!-- <section>
+						<span class="icon solid major fa-link"></span>
+						<h3>Urna quis bibendum</h3>
+						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat
+							dapibus.</p>
+					</section>
+					<section>
+						<span class="icon major fa-gem"></span>
+						<h3>Aliquam urna dapibus</h3>
+						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat
+							dapibus.</p>
+					</section> -->
+				</div>
+				<h3>Technologies</h3>
+				<p>JavaScript | React | Redux | Express | Sequelize | Node.js | Python | Flask | Sqlalchemy | PostgreSQL | HTML/CSS</p>
+				<h3>Bio</h3>
+				<p>Software Development @ App Academy
+					<br/>Data Scientist @ Brex
+					<br/>History @ Harvard University (cum laude)
+				<br/><br/>
+				I'm aiming to grow what features and applications I can build, as well as improve the robustness of my existing skills.
+				I'm looking to work alongside passionate, knowledgeable, and supportive developers building something beautiful in web
+				development.</p>
+				<!-- <ul>
+					<li>React</li>
+				</ul> -->
+				<!-- <ul class="actions">
+					<li><a href="generic.html" class="button">Learn more</a></li>
+				</ul> -->
+			</div>
+		</section>
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<!-- <section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hyperspace</h1>
 							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
@@ -41,10 +140,10 @@
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<!-- <section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
@@ -81,57 +180,21 @@
 								</div>
 							</div>
 						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
+					</section> -->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
+							<h2>Coffee & Chat</h2>
+							<p>I'd like to meet you! I'm happy to discuss software engineering, time management and organization, and ways to eat cookie dough. <i class="fas fa-cookie-bite"></i>
+								<!-- <div>Shoot me an email and we'll find a time to Zoom.</div> -->
+								<br><br>See my contact info at the top left of this page.
+							</p>
+							<!-- <ul class="contact">
+								<h3>Email</h3>
+								<span>rcreadii@gmail.com</span>
+							</ul> -->
+							<!-- <div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
@@ -181,7 +244,7 @@
 										</li>
 									</ul>
 								</section>
-							</div>
+							</div> -->
 						</div>
 					</section>
 
@@ -191,7 +254,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; rcreadii. All rights reserved.</li><li>Thanks to <a href="aj@lkn.io">@ajlkn</a> and <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
