--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<section id="sidebar">
 				<div class="wrapper fade-up">
 					<div class="name">
-						<div style="font-family: 'Arial', monospace; font-size: 32px; text-align: right;">Chris Read</div>
-						<div style="font-family: 'Arial'; font-size: 15px; text-align: right;">Software Developer</div>
+						<div style="font-size: 32px">Chris Read</div>
+						<div style="font-size: 15px">Software Developer</div>
 						<div>
 							<div style="font-size: 12px;">rcreadii@gmail.com</div>
 							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-angellist fa-1x" /></i></a>
@@ -28,19 +28,15 @@
 						</div>
 					</div>
 				</div>
-				<!-- <br/><br/> -->
-				<!-- <div style="font-size: 15px">
-					Working on
-					<div>
-						LoveLock - 
-					</div>
-				</div> -->
 				<div class="inner">
 					<nav>
 						<ul>
 							<li><a href="#two">Projects</a></li>
+							<li><a href="#partTwo">Technologies</a></li>
+							<li><a href="#partTwo">Bio</a></li>
+							<li><a href="#partTwo">Work History</a></li>
+							<li><a href="#partTwo">A Coffee & Chat</a></li>
 							<!-- <li><a href="#intro">Bio</a></li>  -->
-							<li><a href="#three">Coffee & Chat</a></li>
 							<!-- <li><a href="#one">Who we are</a></li> -->
 							<!-- <li><a href="#two">What we do</a></li> -->
 							<!-- <li><a href="#three">Get in touch</a></li> -->
@@ -50,16 +46,12 @@
 			</section>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
 		<!-- Two -->
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Projects</h2>
-				<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis.
-					Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
-					<!-- <span style="font-style: italic;">Technologies</span>
-					<p>JavaScript React Redux Express Sequelize Node.js Python Flask Sqlalchemy PostgreSQL HTML/CSS</p> -->
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-hand-holding-heart"></span>
@@ -70,7 +62,6 @@
 							<a href="https://lovelockapp.herokuapp.com/login"><i class="fab fa-chrome fa-lg" /></i></a>
 							<a href="https://github.com/rcreadii/lovelock"><i class="fab fa-github fa-lg"/></i></a>
 						</div>
-						<!-- <div style="font-size: 75%; padding-right: 4vw">React // Flask // Sqlalchemy // PostgreSQL</div> -->
 					</section>
 					<section>
 						<span class="icon solid major fa-wine-glass"></span>
@@ -99,35 +90,39 @@
 							<a href="https://github.com/rcreadii/tumbles"><i class="fab fa-github fa-lg" /></i></a>
 						</div>
 					</section>
-					<!-- <section>
-						<span class="icon solid major fa-link"></span>
-						<h3>Urna quis bibendum</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat
-							dapibus.</p>
-					</section>
-					<section>
-						<span class="icon major fa-gem"></span>
-						<h3>Aliquam urna dapibus</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat
-							dapibus.</p>
-					</section> -->
 				</div>
-				<h3>Technologies</h3>
-				<p>JavaScript | React | Redux | Express | Sequelize | Node.js | Python | Flask | Sqlalchemy | PostgreSQL | HTML/CSS</p>
-				<h3>Bio</h3>
-				<p>Software Development @ App Academy
-					<br/>Data Scientist @ Brex
-					<br/>History @ Harvard University (cum laude)
-				<br/><br/>
-				I'm aiming to grow what features and applications I can build, as well as improve the robustness of my existing skills.
-				I'm looking to work alongside passionate, knowledgeable, and supportive developers building something beautiful in web
-				development.</p>
-				<!-- <ul>
-					<li>React</li>
-				</ul> -->
-				<!-- <ul class="actions">
-					<li><a href="generic.html" class="button">Learn more</a></li>
-				</ul> -->
+				<div id="partTwo">
+					<h2>History</h2>
+					<div class="features">
+						<section>
+							<span class="icon solid major fa-code"></span>
+							<h3>Technologies</h3>
+							<p>JavaScript | React | Redux | Express | Sequelize | Node.js | Python | Flask | Sqlalchemy | PostgreSQL | HTML/CSS</p>
+						</section>
+						<section>
+							<span class="icon solid major fa-book"></span>
+							<h3>Bio</h3>
+							<p>I'm looking to work alongside passionate, knowledgeable, and supportive developers building something beautiful in web development. I'm aiming to grow what features and applications I can build.
+							</p>
+						</section>
+						<section>
+							<span class="icon solid major fa-history"></span>
+							<h3>Work History</h3>
+								<p>
+									Software Development @ App Academy
+									<br />Data Scientist @ Brex
+									<br />History @ Harvard University (cum laude)
+								</p>
+						</section>
+						<section>
+							<span class="icon solid major fa-coffee"></span>
+							<h3>Coffee & Chat</h3>
+							<p> I'd like to meet you! I'm happy to discuss software engineering, time management and organization, and ways to eat cookie dough. <i class="fas fa-cookie-bite"></i>
+								<br><br>See my contact info at the top left of this page.
+							</p>
+						</section>
+						</div>
+				</div>
 			</div>
 		</section>
 				<!-- Intro -->
@@ -183,13 +178,13 @@
 					</section> -->
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Coffee & Chat</h2>
-							<p>I'd like to meet you! I'm happy to discuss software engineering, time management and organization, and ways to eat cookie dough. <i class="fas fa-cookie-bite"></i>
+					<!-- <section id="three" class="wrapper style1 fade-up">
+						<div class="inner"> -->
+							<!-- <h2>Coffee & Chat</h2> -->
+							<!-- <p>I'd like to meet you! I'm happy to discuss software engineering, time management and organization, and ways to eat cookie dough. <i class="fas fa-cookie-bite"></i> -->
 								<!-- <div>Shoot me an email and we'll find a time to Zoom.</div> -->
-								<br><br>See my contact info at the top left of this page.
-							</p>
+								<!-- <br><br>See my contact info at the top left of this page. -->
+							<!-- </p> -->
 							<!-- <ul class="contact">
 								<h3>Email</h3>
 								<span>rcreadii@gmail.com</span>
@@ -245,8 +240,8 @@
 									</ul>
 								</section>
 							</div> -->
-						</div>
-					</section>
+						<!-- </div>
+					</section> -->
 
 			</div>
 
