change colors to Frost

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                         Chris
                         <span class="text-primary">Read</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="subheading mb-5">   
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
                         Boston, MA 02134 · (702) 630-8300 ·
                         <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a software developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).                    
-                    I'm looking to work alongside passionate, knowledgeable, and supportive developers building something beautiful in web
-                    development.</p>
+                    <p class="lead mb-5">I'm a Cofounder (Frost Education*), Software Developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).
+                    </br></br> I've researched housing policy with the former head of the Federal Housing and Finance Agency, cold-emailed a billionaire to get a summer internship in finance, and sought out a Nobel Laurete to receive feedback on a proposal for immigration reform. I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something beautiful.
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/rcreadii"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://angel.co/u/rcreadii"><i class="fab fa-angellist"></i></a>
