--- a/index.html
+++ b/index.html
@@ -165,7 +165,16 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Founder</h3>
+                            <h3 class="mb-0">Cofounder</h3>
+                            <div class="subheading mb-3">Frost Education*</div>
+                            <p>Cofounded a deferred/waitlisted college consulting firm that teaches students to build group capstone projects.</p>
+                            <a href="https://frost.education">Frost Education</a>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cofounder</h3>
                             <div class="subheading mb-3">Algorithmic Trading</div>
                             <p>Applied websockets and asyncio to securely ingest financial market data after authenticating with splinter and urllib, delivering payloads with psycopg2 to a PostgreSQL database to permit live order execution and strategic backtesting through a custom CLI stock terminal.</p>
                         </div>
@@ -200,8 +209,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">App Academy</h3>
-                            <div class="subheading mb-3">Full Stack Development</div>
-                            <div>1000-hour program with a less than 3% acceptance rate.</div>
+                            <div class="subheading mb-3">Full Stack Software Engineering Program</div>
+                            <div>Immersive software development course for full stack web development. (Less than 3% acceptance rate.)</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Feb 2021</span></div>
                     </div>
