--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </h1>
                     <div class="subheading mb-5">   
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
-                        Boston, MA 02134 · (702) 630-8300 ·
+                        Boston, MA 02134 ·
                         <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I'm a Cofounder (Frost Education*), Software Developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).
