update frost education description

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         Boston, MA 02134 ·
                         <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a Cofounder (Frost Education*), Software Developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).
-                    </br></br> I've researched housing policy with the former head of the Federal Housing and Finance Agency, cold-emailed a billionaire to get a summer internship in finance, and sought out a Nobel Laurete to receive feedback on a proposal for immigration reform. I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something beautiful.
+                    <p class="lead mb-5">I'm a Co-Founder (Frost Education*), Software Developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).
+                    </br></br> I've researched American housing legislation with the former head of the Federal Housing and Finance Agency, emailed a billionaire to get a summer internship in finance, and was named a Friedman Family Harvard College Scholar. I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something beautiful.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/rcreadii"><i class="fab fa-github"></i></a>
@@ -165,16 +165,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Cofounder</h3>
+                            <h3 class="mb-0">Co-Founder</h3>
                             <div class="subheading mb-3">Frost Education*</div>
-                            <p>Cofounded a deferred/waitlisted college consulting firm that teaches students to build group capstone projects.</p>
+                            <p>Co-founded an incentive-aligned online education service that guides students through the creation of joint capstone projects for
+                            university admissions. The service, in addition to helping students stand out in the admissions process, also attempts
+                            to teach the collaborative skills and independent problem-solving abilities that are increasingly characteristic of
+                            modern society.</p>
                             <a href="https://frost.education">Frost Education</a>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Cofounder</h3>
+                            <h3 class="mb-0">Co-Founder</h3>
                             <div class="subheading mb-3">Algorithmic Trading</div>
                             <p>Applied websockets and asyncio to securely ingest financial market data after authenticating with splinter and urllib, delivering payloads with psycopg2 to a PostgreSQL database to permit live order execution and strategic backtesting through a custom CLI stock terminal.</p>
                         </div>
