remove frost.education website

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             university admissions. The service, in addition to helping students stand out in the admissions process, also attempts
                             to teach the collaborative skills and independent problem-solving abilities that are increasingly characteristic of
                             modern society.</p>
-                            <a href="https://frost.education">Frost Education</a>
+                            <!-- <a href="https://frost.education">Frost Education</a> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Present</span></div>
                     </div>
