update minor speech things, workflow section

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     </h1>
                     <div class="subheading mb-5">   
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
-                        Boston, MA 02134 ·
+                        Boston, MA 02138 ·
                         <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I'm a Co-Founder (Frost Education*), Software Developer (App Academy), former Data Scientist (Brex), and History graduate (Harvard University).
-                    </br></br> I've researched American housing legislation with the former head of the Federal Housing and Finance Agency, emailed a billionaire to get a summer internship in finance, and was named a Friedman Family Harvard College Scholar. I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something beautiful.
+                    </br></br> I've researched American housing legislation with the former head of the Federal Housing and Finance Agency, gotten a summer internship by cold-emailing a billionaire in finance, and was named a Friedman Family Harvard College Scholar. I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something they love.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/rcreadii"><i class="fab fa-github"></i></a>
@@ -103,6 +103,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Pair-Programming
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Remote Work
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -114,7 +118,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">LoveLock</h3>
-                            <div class="subheading mb-3">Mobile web application pointing each of two users towards the other using a compass interface.</div>
+                            <div class="subheading mb-3">Mobile web application pointing each of two users towards the other using a compass interface</div>
                             <p>Integrated OpenWeatherMap and GeoDB Cities APIs in a dynamic algorithm matching two users based on a unique URL, and
                             generating compass directions from one user to the other, to present weather and city data on “lock.”</p>
                             <p>Harnessed the Sensors API to employ device orientation via an event listener in order to capture a mobile device’s
@@ -130,7 +134,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">OpenBar</h3>
-                            <div class="subheading mb-3">OpenTable-inspired web application to search, review, and make reservations at bars.</div>
+                            <div class="subheading mb-3">OpenTable-inspired web application to search, review, and make reservations at bars</div>
                             <p>Leveraged Redux within a React frontend to store and access bar information, such as hours of operation and user
                             reviews, to enhance user experience of detailed bar information. Further used Redux to dynamically present and update
                             logged-in user review data as placeholder values to an update review form for ease of use.</p>
@@ -145,7 +149,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">GoodLaughs</h3>
-                            <div class="subheading mb-3">GoodReads-inspired web application to save, rate, review, and share jokes.</div>
+                            <div class="subheading mb-3">GoodReads-inspired web application to save, rate, review, and share jokes</div>
                             <p>Extended express-validator to create server-side custom validators for user login, signup, and joke form data to be
                             rendered dynamically through a PugJS template and allow users to conveniently diagnose submission errors.</p>
                             <p>Managed user authentication with the Express request object after a confirmatory Sequelize query to a PostgreSQL
