--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         Boston, MA 02138 ·
                         <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm a Startup Co-Founder (CTO @ Frost Education*), Software Developer (App Academy - 2021), former Data Scientist (Brex - YC W17), and Harvard graduate (2017).
-                    </br></br> I'm a History major who, after taking a chunk of courses in computer science, statistics, and mathematics and working at a startup, transitioned from finance and economics into software engineering. Previously, I researched American housing legislation with the former head of the Federal Housing and Finance Agency and got a summer finance internship by cold-emailing a billionaire. Now, I'm looking to work alongside passionate, knowledgeable, and supportive engineers building something they love.
+                    <p class="lead mb-5">I'm a Startup Co-Founder (CTO @ Frost Education*), Software Developer (App Academy - 2021), former Data Scientist (Brex - YC W17), and Harvard Graduate (2017).
+                    </br></br> I was originally a History major who, after taking a chunk of courses in computer science, statistics, and mathematics and working at a startup, transitioned from finance and economics into software engineering. Previously, I researched American housing legislation with the former head of the Federal Housing and Finance Agency and got a summer finance internship by cold-emailing a billionaire.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/rcreadii"><i class="fab fa-github"></i></a>
