give credit to Start Bootstrap as designers

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
                     </h1>
                     <div class="subheading mb-5">   
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
-                        Boston, MA 02138 ·
-                        <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
+                        Boston, MA 02138 · <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
+                        ·
+                        <a href="https://startbootstrap.com/theme/resume">Design by Start Bootstrap</a>
                     </div>
+                    <div class="subheading mb-5"></div>
                     <p class="lead mb-5">I'm a Startup Co-Founder (CTO @ Frost Education*), Software Developer (App Academy - 2021), former Data Scientist (Brex - YC W17), and Harvard Graduate (2017).
                     </br></br> I was originally a History major who, after taking a chunk of courses in computer science, statistics, and mathematics and working at a startup, transitioned from finance and economics into software engineering. Previously, I researched American housing legislation with the former head of the Federal Housing and Finance Agency and got a summer finance internship by cold-emailing a billionaire.
                     </p>
