--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/rcreadii/rcreadii.github.io/blob/main/assets/img/resume_read_chris.pdf" rel="noopener noreferrer" target="_blank">Resume</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
@@ -66,9 +67,10 @@
                     </br></br> I was originally a History major who, after taking a chunk of courses in computer science, statistics, and mathematics and working at a startup, transitioned from finance and economics into software engineering. Previously, I researched American housing legislation with the former head of the Federal Housing and Finance Agency and got a summer finance internship by cold-emailing a billionaire.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon link-general" href="https://github.com/rcreadii"><i class="fab fa-github"></i></a>
-                        <a class="social-icon link-general" href="https://angel.co/u/rcreadii"><i class="fab fa-angellist"></i></a>
-                        <a class="social-icon link-general" href="https://www.linkedin.com/in/rcreadii"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon link-general" href="https://github.com/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon link-general" href="https://angel.co/u/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-angellist"></i></a>
+                        <a class="social-icon link-general" href="https://www.linkedin.com/in/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon link-general" href="https://github.com/rcreadii/rcreadii.github.io/blob/main/assets/img/resume_read_chris.pdf" rel="noopener noreferrer" target="_blank"><i class="fas fa-file"></i></a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
