project - github and live site - links open in a new tab

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
                         Boston, MA 02138 · <a href="mailto:rcreadii@gmail.com">rcreadii@gmail.com</a>
                         ·
-                        <a href="https://startbootstrap.com/theme/resume">Design by Start Bootstrap</a>
+                        <a href="https://startbootstrap.com/theme/resume" rel="noopener noreferrer" target="_blank">Design by Start Bootstrap</a>
                     </div>
                     <div class="subheading mb-5"></div>
                     <p class="lead mb-5">I'm a Startup Co-Founder (CTO @ Frost Education*), Software Developer (App Academy - 2021), former Data Scientist (Brex - YC W17), and Harvard Graduate (2017).
@@ -142,8 +142,8 @@
                             CRUD operation in a PostgreSQL database to later calculate compass bearing.</p>
                         </div>
                         <div class="flex-shrink-0">
-                            <a class="social-icon link-project" href="https://github.com/rcreadii/lovelock"><i class="fab fa-github"></i></a>
-                            <a class="social-icon link-project" href="https://lovelockapp.herokuapp.com"><i class="fas fa-terminal"></i></a>
+                            <a class="social-icon link-project" href="https://github.com/rcreadii/lovelock" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="social-icon link-project" href="https://lovelockapp.herokuapp.com" rel="noopener noreferrer" target="_blank"><i class="fas fa-terminal"></i></a>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -157,8 +157,8 @@
                             user display of critical bar details.</p>
                         </div>
                         <div class="flex-shrink-0">
-                            <a class="social-icon link-project" href="https://github.com/jpremo/open_bar"><i class="fab fa-github"></i></a>
-                            <a class="social-icon link-project" href="https://openbarapp.herokuapp.com"><i class="fas fa-terminal"></i></a>
+                            <a class="social-icon link-project" href="https://github.com/jpremo/open_bar" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="social-icon link-project" href="https://openbarapp.herokuapp.com" rel="noopener noreferrer" target="_blank"><i class="fas fa-terminal"></i></a>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -171,8 +171,8 @@
                             database to allow the creation of unique user profiles with protected data.</p>
                         </div>
                         <div class="flex-shrink-0">
-                            <a class="social-icon link-project" href="https://github.com/Ty-Newman/GoodLaughs"><i class="fab fa-github"></i></a>
-                            <a class="social-icon link-project" href="https://good-laughs.herokuapp.com"><i class="fas fa-terminal"></i></a>
+                            <a class="social-icon link-project" href="https://github.com/Ty-Newman/GoodLaughs" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="social-icon link-project" href="https://good-laughs.herokuapp.com" rel="noopener noreferrer" target="_blank"><i class="fas fa-terminal"></i></a>
                         </div>
                     </div>
                 </div>
