--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <!-- Dev Icons -->
+        <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css" rel="stylesheet">
         <!-- Meta tags -->
         <meta name="author" content="" />
         <meta name="description" content="" />
@@ -83,19 +85,19 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-sql"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-redux"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-express"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-sequelize"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-flask"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-sqlalchemy"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+                        <li class="list-inline-item"><i class="devicon-javascript-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-python-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-css3-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-react-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-redux-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-express-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-nodejs-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-sequelize-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-flask-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-sqlalchemy-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-docker-plain"></i></li>
                     </ul>
                     <p class="mb-0">Javascript - Python - PostgreSQL - HTML - CSS - React - Redux - Express - Node.js - Sequelize - Flask - SQLAlchemy -
                     Docker</p>
