next truthful version

--- a/index.html
+++ b/index.html
@@ -65,9 +65,16 @@
                         <a href="https://startbootstrap.com/theme/resume" rel="noopener noreferrer" target="_blank">Design by Start Bootstrap</a>
                     </div>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5">I'm a Startup Co-Founder (CTO @ Frost Education*), Software Developer (App Academy - 2021), former Data Scientist (Brex - YC W17), and Harvard Graduate (2017).
-                    </br></br> I was originally a History major who, after taking a chunk of courses in computer science, statistics, and mathematics and working at a startup, transitioned from finance and economics into software engineering. Previously, I researched American housing legislation with the former head of the Federal Housing and Finance Agency and got a summer finance internship by cold-emailing a billionaire.
-                    </p>
+                    <p class="lead mb-5">Software Developer.</br>
+                    Co-Founder at Frost Education*.</br>
+                    Former Data Scientist (Marketing Analyst) at Brex.</br>
+                    Graduate of App Academy (Software Engineering, Full Stack).</br>
+                    Graduate of Harvard University (History, cum laude).</br>
+                    </br>
+                    Development skills in Javascript, Python, SQL, React, Redux, Express, Sequelize, Node.js, Flask, Sqlalchemy, HTML, CSS,
+                    PostgreSQL, and Docker.</br>
+                    </br>
+                    Currently building: TabTomb, a browser extension that displays how long a tab has been open.</p>
                     <div class="social-icons">
                         <a class="social-icon link-general" href="https://github.com/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon link-general" href="https://angel.co/u/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-angellist"></i></a>
@@ -189,7 +196,8 @@
                             <h3 class="mb-0">Co-Founder</h3>
                             <div class="subheading mb-3">Frost Education*</div>
                             <p>Co-founded an incentive-aligned online education service that guides students through the creation of joint capstone projects for
-                            university admissions. The service, in addition to helping students stand out in the admissions process, also attempts
+                            university admissions.</p>
+                            <p>The service, in addition to helping students stand out in the admissions process, also attempts
                             to teach the collaborative skills and independent problem-solving abilities that are increasingly characteristic of
                             modern society.</p>
                             <!-- <a href="https://frost.education">Frost Education</a> -->
@@ -199,27 +207,28 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Co-Founder</h3>
-                            <div class="subheading mb-3">Algorithmic Trading</div>
-                            <p>Applied websockets and asyncio to securely ingest financial market data after authenticating with splinter and urllib, delivering payloads with psycopg2 to a PostgreSQL database to permit live order execution and strategic backtesting through a custom CLI stock terminal.</p>
+                            <div class="subheading mb-3">Multiple: M1 - All-American HandSanitizer - “The Trading Company” (each worked on sequentially)</div>
+                            <p>Applied websockets and asyncio to ingest financial market data after authenticating with splinter and urllib, delivering
+                            payloads with psycopg2 to a PostgreSQL database.</p>
+                            <p>Enabled live order execution through a CLI “stock terminal” by connecting with a third party API.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2020 - Jul 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data Scientist</h3>
+                            <h3 class="mb-0">Data Scientist (Marketing Analyst)</h3>
                             <div class="subheading mb-3">Brex</div>
-                            <p>Owned and built a python and PostgreSQL system to manage new customer attribution, participating in over 50 weekly
-                            senior executive meetings fielding questions from the entire leadership team.</p>
+                            <p>Owned python and PostgreSQL scripts to manage new customer attribution.</p>
+                            <p>Gathered and formatted data for presentation in weekly meetings involving parts of the leadership team.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2018 - Dec 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Independent Researcher</h3>
-                            <div class="subheading mb-3">Research</div>
-                            <p>Employed selenium and beautifulsoup to pull cryptocurrency trading data, enabling automatic data analysis via numpy and
-                            pandas to discover financial arbitrage opportunities across multiple cryptocurrency exchanges.</p>
-                            <p>Wrote over 100,000 words while researching 10 leading technological fields.</p>
+                            <h3 class="mb-0">Personal Thinking</h3>
+                            <p>Wrote over 100,000 words of thoughts, plans, and notes. Included learning about 10 technological fields.</p>
+                            <p>During one month, created a program that employed selenium, beautifulsoup, and numpy to attempt to capitalize on
+                            financial arbitrage opportunities between cryptocurrency exchanges.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2017 - Sep 2018</span></div>
                     </div>
@@ -233,8 +242,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">App Academy</h3>
-                            <div class="subheading mb-3">Full Stack Software Engineering Program</div>
-                            <div>Immersive software development course for full stack web development. (Less than 3% acceptance rate.)</div>
+                            <div class="subheading mb-3">Software Engineering (Full Stack Web Development)</div>
+                            <div>Immersive software development course for full stack web development.</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sep 2020 - Feb 2021</span></div>
                     </div>
@@ -242,9 +251,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Harvard University</h3>
                             <div class="subheading mb-3">History</div>
-                            <div>GPA: 3.71</div>
-                            <div>Friedman Family Harvard College Scholar</div>
+                            <div>GPA: 3.71 (cum laude)</div>
                             <div>Computer Science Courses: Introduction to Computer Science - Introduction to Data Science - Machine Learning</div>
+                            <div>Included one 5-course & two 6-course semesters</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2013 - May 2017</span></div>
                     </div>
