--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/rcreadii/rcreadii.github.io/blob/main/assets/img/resume_read_chris.pdf" rel="noopener noreferrer" target="_blank">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/rcreadii/rcreadii.github.io/blob/main/assets/img/resume_read_chris.pdf" rel="noopener noreferrer" target="_blank">Link to Resume</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
@@ -65,16 +65,13 @@
                         <a href="https://startbootstrap.com/theme/resume" rel="noopener noreferrer" target="_blank">Design by Start Bootstrap</a>
                     </div>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5">Software Developer.</br>
-                    Co-Founder at Frost Education*.</br>
-                    Former Data Scientist (Marketing Analyst) at Brex.</br>
-                    Graduate of App Academy (Software Engineering, Full Stack).</br>
-                    Graduate of Harvard University (History, cum laude).</br>
+                    <p class="lead mb-5">Software Developer. Co-Founder at Frost Education*.</br>
                     </br>
-                    Development skills in Javascript, Python, SQL, React, Redux, Express, Sequelize, Node.js, Flask, Sqlalchemy, HTML, CSS,
-                    PostgreSQL, and Docker.</br>
+                    Brex - Former Data Scientist (Marketing Analyst)</br>
+                    App Academy - Graduate in Software Engineering (Full Stack).</br>
+                    Harvard - Graduate in History (cum laude).</br>
                     </br>
-                    Currently building: TabTomb, a browser extension that displays how long a tab has been open.</p>
+                    Current Project: TabTomb, a browser extension that displays how long a tab has been open in the title of each tab.</p>
                     <div class="social-icons">
                         <a class="social-icon link-general" href="https://github.com/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon link-general" href="https://angel.co/u/rcreadii" rel="noopener noreferrer" target="_blank"><i class="fab fa-angellist"></i></a>
